# hoshiMenu

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  main.cpp  old.travis.yml  travis.yml
setup/: setup.sh
snap/: snapcraft.yaml
